
   * Fully consistent API (defined and correct return values)

   * Complete GLUT independence (internal character sets)

   * Basic building support for biological polymers & small molecules
     with and w/o hydrogens

Current Bugs to Fix

   * superposition system fails with degenerate sets (planer atoms, etc).
     sometimes it just fails period

Changes up to 0.79

   * fixed ribbon & cartoon display when N-terminal atom is the CA

Changes up to 0.78

   * revamped Makefiles for better portability and dependency handling.

Changes up to 0.77

   * sculpting information now cached between changes to molecular structures

   * optimized sculpting for small regions of large proteins

   * FINALLY, modes for two-button mice

Changes up to 0.76

   * VDW radii adjusted.  Use "set legacy_vdw_radii=1" on start-up for old values.

   * Sculpt functionality.  Who needs gummy bears when you can have gummy molecules?

   * Numerous back-end bugs addressed.

   * transparent spheres

Changes up to 0.75

   * enabled automatic completion in the tcl/tk command window

   * altered settings for dot representation

   * created stop_on_exception and raise_exceptions settings.
     WARNING: stop_on_exceptions is NOT set by default (this is so that
     log files which contain errors will continue to function).

   * gutted cmd.py, and created a bunch of sub-modules which contain the
     code previously in cmd.py.  
   
   * superposition bugs fixed with multi-state objects (fit and intra_fit)

   * cmd.set_key can now be used to redefine ALT and CTRL keys in addition
     to function keys and other specials.

Changes up to 0.74

   * very minor bug/doc fixes

Changes up to 0.73

   * improved fragment and residue building capabilities

Changes up to 0.72

   * fixed some logging issues with dragging pieces

   * now possible to create empty objects, fixed mutagenesis wizard in response
 
   * all readable files are shown by default in the Tkinter file dialogs.
